--- a/style.css
+++ b/style.css
@@ -275,6 +275,158 @@ nav ul li a{
 
 }
 
+/** Here begins section 2 **/
+
+.section_2{
+
+  display: grid;
+  grid-template-areas:
+  "image description";
+
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
+  margin-bottom: 8.8rem;
+
+  
+}
+
+.section_2_image{
+  grid-area: image;
+  height: 57.5rem;
+  padding-left: 8.8rem;
+}
+
+.section_2_description{
+  grid-area: description;
+  height: 57.5rem;
+  padding: 4.4rem 0 3.7rem 3.7rem;
+  background-color: var(--white);
+}
+
+.section_2 span{
+  width: 14.5rem;
+  height: 2.4rem;
+  margin: 0 10rem 2.4rem 0;
+  font-family: Aeonik;
+  font-size: 1.4rem;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  color: var(--dark-sand);
+}
+
+.section_2 hr{
+
+  width: 4.4rem;
+  height: 0.3rem;
+  margin: 2.4rem 31.9rem 3.2rem 0;
+  background-color: var(--dark-sand);
 
 
+}
 
+.section_2 p{
+  width: 36.3rem;
+  height: 34.3rem;
+  margin: 3.2rem 0 0 0;
+  font-family: Aeonik;
+  font-size: 1.6rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: var(--charcoal-grey);
+}
+
+.section_2 p > span{
+
+  color: var(--dark-sand);
+
+}
+
+.section_2 button{
+
+  width: 13.6rem;
+  height: 3.6rem;
+  margin: 0 22.7rem 0 0;
+  padding: 1rem 4rem;
+  border: solid 2px var(--dark-sand);
+  background: transparent;
+  color: var(--dark-sand);
+
+}
+
+
+/**Here begins section 3**/
+
+.section_3{
+
+  display: grid;
+  grid-template-areas:
+  "description image";
+
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+
+}
+
+.section_3_image{
+
+  grid-area: image;
+  padding-right: 5rem;
+
+}
+
+.section_3_description{
+
+  grid-area: description;
+  width: 544px;
+  height: 479px;
+  padding: 0 0 33px 8.8rem;
+  background-color: var(--white);
+
+}
+
+.section_3 span{
+
+  width: 14.5rem;
+  height: 2.4rem;
+  margin: 0 10rem 2.4rem 0;
+  font-family: Aeonik;
+  font-size: 1.4rem;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  color: var(--dark-sand);
+
+}
+
+.section_3 hr{
+
+  width: 4.4rem;
+  height: 0.3rem;
+  margin: 2.4rem 31.9rem 3.2rem 0;
+  background-color: var(--dark-sand);
+
+}
+
+.section_3 p{
+
+  width: auto;
+  height: 34.3rem;
+  margin: 3.2rem 0 0 0;
+  font-family: Aeonik;
+  font-size: 1.6rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: var(--charcoal-grey);
+
+}
