--- a/style.css
+++ b/style.css
@@ -632,6 +632,200 @@ nav ul li a{
 
 }
 
+/*Here begins the section 7**/
+
+.section_7{
+  display: grid;
+  grid-template-areas:
+  "images main";
+  padding-left: 8.8rem;
+  padding-right:5rem;
+  padding-top: 8.9rem;
+
+  grid-template-columns: 1fr 1fr;
+}
+
+.section_7__div--1{
+  grid-area: main;
+  
+}
+
+.section_7__div--1 img{
+  width: 60rem;
+  height: 38.6rem;
+}
+
+.section_7__div--2{
+  grid-area: images;
+}
+
+.section_7__div--2 img{
+  width: 24.3rem;
+  height: 18.1rem;
+  margin: 0 3.7rem 2.4rem 2.3rem;
+  
+  
+}
+
+/**Here begins section 8*/
+
+.section_8{
+  padding-left: 8.8rem;
+  padding-right: 8.8rem;
+}
+
+.section_8 span{
+  width: 22.3rem;
+  height: 2.4rem;
+  margin: 0 462px 24px 0;
+  font-family: Aeonik;
+  font-size: 1.4rem;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  color: var(--dark-sand);
+}
+
+.section_8 hr{
+
+  width: 4.4rem;
+  height: 3px;
+  margin: 2.4rem 46.3rem 3.2rem 0;
+  background-color: var(--dark-sand);
+
+}
+
+.section_8 p{
+
+  height: 18px;
+  margin: 33px 0 0;
+  font-family: Aeonik;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.13;
+  letter-spacing: normal;
+  color: var(--charcoal-grey);
+
+}
+
+.section_8 table{
+  width: 100%;
+  margin-top: 5rem;
+  border-color: var(--dark-sand);
+  text-align: center;
+  
+}
+
+.section_8 table td{
+  height:5rem;
+  border: 1px solid;
+  border-color: var(--dark-sand); 
+  font-size: 1.4rem;
+}
+
+td,th{
+  border-collapse: collapse;
+  border: 1px solid;
+  border-spacing: 0;
+}
+
+/*Here begins section9*/
+
+.section_9{
+  display: grid;
+  grid-template-areas: 
+  "image form";
+
+  grid-template-columns: 1fr 1fr;
+
+  padding: 8.8rem 8.8rem 5rem 8.8rem ;
+}
+
+.section_9__div--1{
+  grid-area: image;
+}
+
+.section_9__div--2{
+  grid-area: form;
+  padding-left: 6rem;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+
+}
+
+form span{
+  width: 22.3rem;
+  height: 2.4rem;
+  margin: 0 0 24px 0;
+  font-family: Aeonik;
+  font-size: 1.4rem;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  color: var(--dark-sand);
+}
+
+form hr{
+  width: 4.4rem;
+  height: 3px;
+  margin: 2.4rem 0 3.2rem 0;
+  background-color: var(--dark-sand);
+}
+
+form p{
+  height: fit-content;
+  margin-bottom: 2rem;
+  font-family: Aeonik;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.13;
+  letter-spacing: normal;
+  color: var(--charcoal-grey);
+}
+
+form input{
+  margin-bottom: 3rem;
+  border: none;
+  border-bottom: 1px solid;
+  border-color: var(--dark-sand);
+}
+
+form input::placeholder{
+  color: var(--dark-sand);
+}
+
+form textarea{
+  border: none;
+  border-bottom: 1px solid;
+  border-color: var(--dark-sand);
+  resize: none;
+  height: 10rem;
+}
+
+form textarea::placeholder{
+  color: var(--dark-sand);
+}
+
+form button{
+  width: 132px;
+  height: 36px;
+  margin: 73px 0 0 0;
+  padding: 1rem 4rem;
+  border: solid 2px var(--dark-sand);
+  background-color: transparent;
+  color: var(--dark-sand);
+}
 
 /**Here is the footer**/
 .footer {
